# M_CE

./: CMakeLists.txt  README.md  debug.txt  incorrect_positions  todo.txt
games/: M_CE_vs_M_CE.at  MartinBOT_vs_M_CE.pgn  marcamravall_vs_M_CE (2).pgn  marcamravall_vs_M_CE.pgn  olivermaravalll_vs_M_CE.pgn
src/: board.cpp  board.h  book.cpp  book.h  constants.h  engine.cpp  engine.h  evaluation.cpp  evaluation.h  main.cpp  move.h  move_generation.cpp  move_generation.h  search.cpp  search.h  uci.cpp  uci.h  utils.cpp  utils.h
tools/perft_checker/: CMakeLists.txt  perft_checker.cpp  perft_checker.h
tools/project_lines_counter/: CMakeLists.txt  project_lines_counter.cpp  project_lines_counter.h
